@@ -14,9 +14,13 @@ import org.ucdetector.UCDetectorPlugin;
  * Simple stop watch to measure performance
  */
 public class StopWatch {
-  private static final int MINIMUM_DURATION = 2000;
+  private static final int MINIMUM_DURATION = 1000;
   private final String message;
   private long start = System.currentTimeMillis();
+
+  public StopWatch(String message) {
+    this.message = message;
+  }
 
   public StopWatch(IMember member) {
     this.message = JavaElementUtil.asString(member);
